Se cambia la foto del header y se actualiza el contenido.

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -15,6 +15,10 @@ body {
   background-position: left;
 }
 
+.fondo{
+  background-color: rgba(13, 202, 240, 0.9); /* Color de fondo semitransparente */
+}
+
 /* Mis trabajos */
 
 #Mis-trabajos .image-top {
