Se crean vínculos para las diferentes secciones.

--- a/assets/css/estilos.css
+++ b/assets/css/estilos.css
@@ -19,9 +19,9 @@ body {
   background-color: rgba(13, 202, 240, 0.9); /* Color de fondo semitransparente */
 }
 
-/* Mis trabajos */
+/* Mis viajes */
 
-#Mis-trabajos .image-top {
+#Mis-viajes .image-top {
   height: 250px;
   background-repeat: no-repeat;
   background-size: cover;
